# AGE

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  doc.md  install.py  settings
AGE/: CMakeLists.txt
AGE/Animation/: Animator.cpp  Animator.hpp  StepFunction.hpp  TransformResolveStructure.hpp
AGE/Audio/: Core.hpp  Listener.hpp  OpenAL.hpp  Sound.cpp  Sound.hpp  SoundSource.cpp  SoundSource.hpp  WavReader.cpp  WavReader.hpp
AGE/Containers/: Arena.cpp  Arena.hpp  DefaultAllocator.hpp  DynamicArray.hpp  DynamicBuffer.hpp  TaggedUnion.hpp  TemplateUtils.hpp  Tuple.hpp
AGE/Events/: Cursor.cpp  Cursor.hpp  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp
AGE/Graphics/: CMakeLists.txt  Core.hpp  Transformable.cpp  Transformable.hpp  UnmanagedTransformable.cpp  UnmanagedTransformable.hpp
AGE/Graphics/Core/: Command.hpp  CoreConfiguration.cpp  CoreConfiguration.hpp  CoreCreator.cpp  CoreCreator.hpp  Pool.hpp  VulkanDebug.cpp  VulkanDebug.hpp  coreAPI.cpp
AGE/Graphics/Core/Utils/: Format.hpp  TransitionImageLayout.hpp
AGE/Graphics/Core/Window/: QueueFamilyIndicies.hpp  Window.cpp  Window.hpp
AGE/Graphics/Core/include/: Buffer.hpp  Core.hpp  CoreConfig.hpp  Format.hpp  Image.hpp  Window.hpp  coreAPI.hpp  utils.hpp
AGE/Graphics/Core/src/: Buffer.cpp  Command.cpp  QueueFamilyIndicies.cpp  SwapchainSupportDetails.cpp  VulkanDebug.cpp  Window.cpp  coreAPI.cpp  utils.cpp
AGE/Graphics/Core/tests/: CMakeLists.txt
AGE/Graphics/Memory/: BufferPool.cpp  BufferPool.hpp  DeviceAlloc.cpp  DeviceAlloc.hpp
AGE/Graphics/MemoryHolders/: Buffer.cpp  Buffer.hpp  Image.cpp
AGE/Graphics/ObjectCreation/: DD.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorLayout.hpp  DescriptorManager.cpp  DescriptorManager.hpp  Drawable.cpp  Drawable.hpp  Index.hpp  Shader.cpp  Shader.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  ShapeManager.cpp  ShapeManager.hpp
AGE/Graphics/ObjectCreation/Components/: ArrayComponent.hpp  Bundle.hpp  (+14 more)
AGE/Graphics/Objects/: Sampler.cpp
AGE/Graphics/Rendering/: Framebuffers.cpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp
AGE/Graphics/View/: Camera.cpp  Camera.hpp  SelectedView.cpp  View.cpp  View.hpp
AGE/Graphics/include/: Object.hpp  Vertex.hpp
AGE/Graphics/src/: Object.cpp  Texture.cpp
AGE/Math/: Functions.hpp  Rectangle.hpp  Vector.hpp
AGE/Scene/: Application.cpp  Application.hpp  Entity.hpp  ParticleSystem.hpp  Scene.cpp  Scene.hpp  SceneBase.hpp  ScriptComponent.hpp
AGE/UI/: IButton.hpp  UIBlock.hpp  UIManager.cpp  UIManager.hpp
AGE/Utils/: Logger.cpp  Logger.hpp  utils.cpp  utils.hpp
AGE/include/: Animation.hpp  Application.hpp  Arena.hpp  Audio.hpp  Containers.hpp  Debug.hpp  Entity.hpp  Event.hpp  EventManager.hpp  Events.hpp  Graphics.hpp  Layer.hpp  Math.hpp  Scene.hpp  SceneAPI.hpp  SceneTransition.hpp  ScriptComponent.hpp  Timer.hpp  UI.hpp  View.hpp  utils.hpp
AGE/include/Actors/: Actor.hpp  ActorComponent.hpp  ActorFactory.hpp
AGE/include/Animation/: Animation.hpp
AGE/include/Audio/: Core.hpp  Listener.hpp  OpenAL.hpp
AGE/include/Containers/: Conditional.hpp  DynamicBuffer.hpp  Shared.hpp
AGE/include/Events/: EventManager.hpp  EventManagerImpl.hpp  Events.hpp
AGE/include/Graphics/: BasicShape.hpp  Buffer.hpp  Camera.hpp  ComponentCollector.hpp  CoreConfiguration.hpp  Debug.hpp  Descriptor.hpp  Drawable.hpp  Font.hpp  Format.hpp  Index.hpp  Object.hpp  Rectangle.hpp  Renderer.hpp  Sampler.hpp  Shader.hpp  ShaderBuilder.hpp  ShaderGen.hpp  ShapeInfo.hpp  ShapeManager.hpp  Text.hpp  Texture.hpp  TileMap.hpp  Transformable.hpp  VIBuffers.hpp  Vertex.hpp  View.hpp  ViewManager.hpp  Viewport.hpp  viData.hpp
AGE/include/Math/: Matrix.hpp  Vector.hpp
AGE/include/Physics/: Rigid_body.hpp
AGE/include/ResourceCache/: ResCache.hpp  XmlResource.hpp
AGE/include/Utils/: utils.hpp
AGE/src/: Application.cpp  Application.hpp  CMakeLists.txt  Debug.hpp  Event.cpp  EventManager.cpp  Layer.cpp  Scene.cpp  ScriptComponent.hpp  View.cpp  dummy.cpp  utils.cpp
AGE/src/Actors/: Actor.cpp  ActorComponent.cpp  ActorFactory.cpp
AGE/src/Animation/: Animation.hpp  Animator.cpp  Animator.hpp  CMakeLists.txt  LinearFunction.hpp  State.hpp  StepFunction.hpp
AGE/src/Audio/: CMakeLists.txt  Core.cpp  Listener.cpp  Listener.hpp  OpenAL.hpp  Sound.cpp  SoundSource.cpp  SoundSource.hpp  WavReader.cpp
AGE/src/Containers/: Arena.cpp  CMakeLists.txt  Shared.hpp  TaggedUnion.hpp  TemplateUtils.hpp
AGE/src/Events/: CMakeLists.txt  Cursor.cpp  Cursor.hpp  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  EventManagerImpl.cpp  Events.cpp
AGE/src/Graphics/: BasicShape.cpp  Buffer.cpp  CMakeLists.txt  Camera.cpp  CoreConfiguration.cpp  Descriptor.cpp  Drawable.cpp  Font.cpp  Format.cpp  Index.cpp  Object.cpp  PipelineManager.cpp  PipelineManager.hpp  PositionManager.cpp  PositionManager.hpp  Rectangle.cpp  Renderer.cpp  Sampler.cpp  Shader.cpp  ShaderBuilder.cpp  ShapeManager.cpp  Text.cpp  Texture.cpp  TileMap.cpp  Transformable.cpp  Transformable.hpp  UnmanagedTransformable.cpp  UnmanagedTransformable.hpp  Vertex.cpp  View.cpp  ViewManager.cpp  Viewport.cpp
AGE/src/Math/: Rectangle.hpp  Vector.hpp
AGE/src/Physics/: Rigid_body.cpp  deb_main.cpp
AGE/src/ResourceCache/: ResCache.cpp  XmlResource.cpp
AGE/src/Scene/: Application.cpp  Application.hpp  CMakeLists.txt  Entity.hpp  ParticleSystem.hpp  Scene.cpp  Scene.hpp  SceneAPI.hpp  SceneBase.cpp  SceneBase.hpp  ScriptComponent.hpp
AGE/src/UI/: CMakeLists.txt  IButton.hpp  UIBlock.cpp  UIBlock.hpp  UIManager.cpp  UIManager.hpp
AGE/src/Utils/: CMakeLists.txt  utils.cpp  utils.hpp
AGE/test/: CMakeLists.txt
AGE/test/Resources/: test.frag  test.frag.spv  test.vert  test.vert.spv
AGE/test/include/: Rectangle.hpp  TestRectangle.hpp  TestTriangle.hpp
AGE/test/src/: Background.hpp  Button.hpp  HelloText.hpp  RectController.hpp  TestActor.xml  TestTriangle.hpp  Triangle.hpp  m.hpp  main.cpp
ASA/Graphics/: CMakeLists.txt
ASA/Graphics/Core/: CMakeLists.txt
ASA/Graphics/include/: Object.hpp  Texture.hpp
ASA/Graphics/src/: Texture.cpp
(+193 files in other folders)
